added hero page. Moved links at the top to the right. Updated formatting for hero text and subtext.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 
 <body>
   <div class="hero">
-    <div class="header">Header Logo</div>
+    <div class="header">Header Logo
+    <ul class="headlinks">
+      <li><a href="#">Our Mission</a></li>
+      <li><a href="#">Services</a></li>
+      <li><a href="#">Contact us</a></li>
+    </ul>
+    </div>
+    <div class="herocontent">This website is awesome</div>
+      <div class="herosub">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
   </div>
 </body>
 </html>
