Added boxes for the image, adjusted spacing to align items in row with subtext underneath hero text.

--- a/index.html
+++ b/index.html
@@ -7,16 +7,28 @@
 </head>
 
 <body>
-  <div class="hero">
-    <div class="header">Header Logo
-    <ul class="headlinks">
+  <div class="header">Header Logo
+    <ul id="headlinks">
       <li><a href="#">Our Mission</a></li>
       <li><a href="#">Services</a></li>
       <li><a href="#">Contact us</a></li>
     </ul>
-    </div>
-    <div class="herocontent">This website is awesome</div>
-      <div class="herosub">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
   </div>
+    <div class="hero">
+      <div class="herocontent">Welcome to Maggie's website!
+          <div id="herosub">Maggie is the cutest cat in the entiere world. Click the link below to stay up to date on her adventures!</div>
+            <button>Sign up</button>
+      </div>
+            <div class="imgcontainer">
+            <img src= "favoritemaggie.jpg" alt="maggie">
+            </div>
+            </div>
+      </div>
+          
+
+      
+<div class="info">
+      More Maggie
+    </div>
 </body>
 </html>
