Added quote section. Began the call to action section.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
   <div class="header">Header Logo
     <ul id="headlinks">
-      <li><a href="#">Our Mission</a></li>
-      <li><a href="#">Services</a></li>
+      <li><a href="#">Send her treats</a></li>
+      <li><a href="#">Request a photo</a></li>
       <li><a href="#">Contact us</a></li>
     </ul>
   </div>
@@ -28,7 +28,30 @@
 
       
 <div class="info">
-      More Maggie
+      Get to know Maggie
+</div>
+      <div class="infopics">
+        <figure>
+        <img src="./maggielounge.jpg" class="infoimg" alt="maggielounge">
+        <figcaption>Maggie is very photogenic</figcaption>
+        </figure>
+        <figure>
+        <img src="./maggiepizza.jpg" class="infoimg" alt="maggiepizza">
+        <figcaption>She loves all types of food, even pizza</figcaption>
+        </figure>
+        <figure>
+        <img src="./maggiewindow.jpg" class="infoimg" alt="maggiewindow">
+        <figcaption>She loves to take naps and watch birds</figcaption>
+        </figure>
+        <figure>
+        <img src="./maggiexmas.jpg" class="infoimg" alt="maggiexmas">
+        <figcaption>Christmas is her favorite holiday</figcaption>
+        </figure>
+        </div>
+      </div>
     </div>
+    <div class="quote">"It is impossible for a lover of cats to banish these alert, gentle, and discriminating friends, who give us just enough of their regard and complaisance to make us hunger for more."</div>
+      <div class="credit"> -Agnes Repplier</div>
+      <div class="action">Enter your email to receive a personalized greeting from Maggie!</div>
 </body>
 </html>
