Added quote section, pictures, and buttons.

--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
     </div>
     <div class="quote">"It is impossible for a lover of cats to banish these alert, gentle, and discriminating friends, who give us just enough of their regard and complaisance to make us hunger for more."</div>
       <div class="credit"> -Agnes Repplier</div>
-      <div class="action">Enter your email to receive a personalized greeting from Maggie!</div>
+      <div class="action">
+        <div class="actionext">  Maggie wants to meet you!
+      <div id="herosub">Enter your email address to receive a personalized greeting from Maggie!</div>
+      </div>
+      <button class="button2">Sign up</button>
 </body>
 </html>
